# Operating-Systems-labs-2023

1. Процессы, демонизация/include/: daemon.hpp
lab1/: build.sh  config.txt
lab1/include/: config.hpp
lab1/src/: daemon.cpp  main.cpp
lab2/: CMakeLists.txt
lab2/client/: client.hpp  goat.hpp
lab2/conn/: conn.hpp  conn_mq.cpp  conn_pipe.cpp  conn_shm.cpp  message.hpp
lab2/host/: client_info.hpp  host.cpp  host.hpp  wolf.hpp
lab2/utils/: utils.hpp
lab3/: CMakeLists.txt  build.sh
lab3/include/: queue_node.hpp  scsp_queue.hpp
lab3/src/: main.cpp
